[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/rocket_fire.png" type="Texture" id=1]
[ext_resource path="res://Assets/rocket_ship.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Rocket.gd" type="Script" id=3]
[ext_resource path="res://Assets/font_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/label_long.png" type="Texture" id=5]
[ext_resource path="res://Assets/sounds/rocket.ogg" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16, 0 ), Vector2( 0, 0 ) ]
}

[node name="Rocket" type="Spatial"]
script = ExtResource( 3 )

[node name="ship" type="Sprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.826698, 0.562646, 0, -0.562646, 0.826698, 0, 0.321487, 0.165541 )
pixel_size = 0.04
shaded = true
alpha_cut = 2
texture = ExtResource( 2 )

[node name="fire" type="Sprite3D" parent="ship"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00947964, 0 )
visible = false
pixel_size = 0.04
shaded = true
alpha_cut = 2
texture = ExtResource( 1 )

[node name="HelpText" type="Node2D" parent="."]
position = Vector2( 32, 0 )

[node name="Arrow" type="Node2D" parent="HelpText"]

[node name="LabelRight" type="Node2D" parent="HelpText/Arrow"]
visible = false

[node name="label_long" type="Sprite" parent="HelpText/Arrow/LabelRight"]
position = Vector2( 144, 0 )
rotation = 3.14159
scale = Vector2( 0.397, -0.397 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HelpText/Arrow/LabelRight"]
margin_left = 24.0
margin_top = -8.0
margin_right = 272.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "Get to da ship!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelLeft" type="Node2D" parent="HelpText/Arrow"]
visible = false
position = Vector2( -360, 0 )

[node name="label_long" type="Sprite" parent="HelpText/Arrow/LabelLeft"]
position = Vector2( 144, 0 )
rotation = 3.14159
scale = Vector2( -0.397, -0.397 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="HelpText/Arrow/LabelLeft"]
margin_left = 24.0
margin_top = -8.0
margin_right = 272.0
margin_bottom = 8.0
custom_fonts/font = ExtResource( 4 )
text = "Get to da ship!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HelpText/Arrow"]
autoplay = "point"
anims/point = SubResource( 1 )

[node name="RocketSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "Sound effects"
